Fixed visual overlapping of some positioned elements due to wrong z-indexes

--- a/bottlecap/layouts/popper/static/css/elements/portlets.less
+++ b/bottlecap/layouts/popper/static/css/elements/portlets.less
@@ -5,6 +5,7 @@
     .gradientBar(darken(@baseColor2, 10%), @baseColor2);
     text-shadow: none;
     position: relative;
+    z-index: 0;
     h3 {
         font-size: 1.333;
         margin-top: 0;
